<?xml version="1.0"?>
<package format="2">

  <name>actor_plugin_social</name>
  <version>0.0.0</version>
  <description>The actor_plugin_social package</description>

  <maintainer email="j.karwowski@stud.elka.pw.edu.pl">Jaroslaw Karwowski</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/rayvburn/incare_people_sim</url>
  <author email="j.karwowski@stud.elka.pw.edu.pl">Jaroslaw Karwowski</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actor_sim_utils</build_depend>
  <build_depend>actor_sim_srv</build_depend>
  <build_depend>social_force_vis</build_depend>

  <!-- global planner -->
  <build_depend>costmap_2d</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>navfn</build_depend>
  <!-- <build_depend>grid_map_ros</build_depend> -->
  

  <exec_depend>roscpp</exec_depend>
  <exec_depend>actor_sim_utils</exec_depend>
  <exec_depend>actor_sim_srv</exec_depend>
  <exec_depend>social_force_vis</exec_depend>

  <!-- global planner -->
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>navfn</exec_depend>
  <!-- <exec_depend>grid_map_ros</exec_depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
  
</package>
