<?xml version="1.0"?>
<package format="2">

  <name>actor_plugin_social</name>
  <version>0.0.0</version>
  <description>The actor_plugin_social package</description>

  <maintainer email="j.karwowski@stud.elka.pw.edu.pl">Jaroslaw Karwowski</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/rayvburn/incare_people_sim</url>
  <author email="j.karwowski@stud.elka.pw.edu.pl">Jaroslaw Karwowski</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actor_sim_utils</build_depend>
  <build_depend>actor_sim_srv</build_depend>
  <build_depend>actor_sim_action</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>actor_sim_utils</exec_depend>
  <exec_depend>actor_sim_srv</exec_depend>
  <exec_depend>actor_sim_action</exec_depend>

  <depend>actor_global_plan</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend> <!-- SFM visualization -->
  <depend>incare_human_robot_communication</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
  
</package>
