<?xml version="1.0"?>
<package>
  <name>hubero_bringup_gazebo_ros</name>
  <version>0.7.0</version>
  <description>The hubero_bringup_gazebo_ros package</description>

  <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
  <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
  <license>BSD-3</license>
  <url type="website">https://github.com/rayvburn/hubero</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hubero_gazebo</run_depend>
  <run_depend>hubero_ros</run_depend>

</package>
