<?xml version="1.0"?>
<package format="2">
  <name>hubero_common</name>
  <version>0.6.0</version>
  <description>The hubero_common package</description>

  <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
  <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
  <license>BSD-3</license>
  <url type="website">https://github.com/rayvburn/hubero</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>
