<?xml version="1.0"?>
<package format="2">
  <name>hubero_core</name>
  <version>0.6.0</version>
  <description>The hubero_core package</description>

  <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
  <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
  <license>BSD-3</license>
  <url type="website">https://github.com/rayvburn/hubero</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hubero_common</build_depend>
  <build_depend>hubero_interfaces</build_depend>
  <exec_depend>hubero_common</exec_depend>
  <exec_depend>hubero_interfaces</exec_depend>
</package>
