<?xml version="1.0"?>
<package format="2">
  <name>hubero_gazebo</name>
  <version>0.6.0</version>
  <description>The hubero_gazebo package</description>

  <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
  <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
  <license>BSD-3</license>
  <url type="website">https://github.com/rayvburn/hubero</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>roscpp</build_depend> -->
  <build_depend>gazebo</build_depend>
  <build_depend>hubero_core</build_depend>
  <build_depend>hubero_ros</build_depend>

  <!-- <build_export_depend>roscpp</build_export_depend> -->
  <build_export_depend>gazebo</build_export_depend>
  <build_export_depend>hubero_core</build_export_depend>
  <build_export_depend>hubero_ros</build_export_depend>

  <!-- <exec_depend>roscpp</exec_depend> -->
  <exec_depend>gazebo</exec_depend>
  <exec_depend>hubero_core</exec_depend>
  <exec_depend>hubero_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
